# MCMC_FOR_AMMSB

./: .gitignore  Makefile  main.py  readme.cmake  setup.py
OpenCL/: graph.cl  mcmc_sampler_stochastic.cl  sampler.cl  test.cl
OpenCL/include/: graph.h  random.h
c++/: .gitignore  CMakeLists.txt  Makefile  README  config.mk  config.mk.in  include.mk  readme.cmake
c++/apps/: Makefile
c++/apps/main/: CMakeLists.txt  main.cc
c++/cmake/: FindGlasswing.cmake  FindGnuplotIostream.cmake  FindRamCloud.cmake  FindSparseHash.cmake  FindTinyXml2.cmake
c++/include/d-kv-store/: DKVStore.h
c++/include/d-kv-store/file/: DKVStoreFile.h
c++/include/d-kv-store/ramcloud/: DKVStoreRamCloud.h
c++/include/d-kv-store/rdma/: DKVStoreRDMA.h  OOBNetwork.h  qperf-rdma.h
c++/include/mcmc/: data.h  estimate_phi.h  exception.h  fileio.h  mcmc.h  network.h  np.h  options.h  random.h  sample_latent_vars.h  sampler.h  source-aware-random.h  timer.h  types.h  wrapper_random.h
c++/include/mcmc/learning/: learner.h  mcmc_clsampler.h  mcmc_clsampler_stochastic.h  mcmc_hostsampler.h  mcmc_sampler.h  mcmc_sampler_batch.h  mcmc_sampler_stochastic-distr.h  mcmc_sampler_stochastic.h  mcmc_sampler_stochastic_distr.h  variational_inference_batch.h  variational_inference_stochastic.h
c++/include/mcmc/preprocess/: data_factory.h  dataset.h  hep_ph.h  netscience.h  relativity.h  sparsehash-graph.h
c++/include/mr/: fileio.h  io.h  timer.h
c++/include/mr/net/: broadcast.h  netio.h
c++/include/opencl/: context.h
c++/lib/: Makefile
c++/src/: CMakeLists.txt  Makefile  main.cc  random.cc  timer.cc  wrapper_random.cc
c++/src/d-kv-store/: DKVStoreFile.cc  DKVStoreRamCloud.cc  DKVStoreRamCloud.h  Makefile
c++/src/d-kv-store/file/: DKVStoreFile.cc  Makefile
c++/src/d-kv-store/ramcloud/: DKVStoreRamCloud.cc  Makefile
c++/src/d-kv-store/rdma/: DKVStoreRDMA.cc  Makefile  qperf-rdma.c
c++/src/dkvstore/: DKVStore.h  DKVStoreFile.cc  DKVStoreFile.h  DKVStoreRDMA.cc  DKVStoreRDMA.h  DKVStoreRamCloud.cc  DKVStoreRamCloud.h  OOBNetwork.h  config.h.in  qperf-rdma.c  qperf-rdma.h
c++/src/mcmc/: config.h.in  counter.h  data.cc  data.h  estimate_phi.cc  estimate_phi.h  exception.cc  exception.h  fileio.h  fixed-size-set.h  mcmc.h  network.cc  network.h  np.cc  np.h  options.cc  options.h  random.cc  random.h  sample_latent_vars.cc  sample_latent_vars.h  source-aware-random.h  timer.cc  timer.h  types.h
c++/src/mcmc/learning/: learner.cc  learner.h  mcmc_sampler_batch.h  mcmc_sampler_stochastic.cc  mcmc_sampler_stochastic.h  mcmc_sampler_stochastic_distr.cc  mcmc_sampler_stochastic_distr.h  mock_mpi.h
c++/src/mcmc/preprocess/: data_factory.cc  data_factory.h  dataset.cc  dataset.h  netscience.cc  netscience.h  relativity.cc  relativity.h  sparsehash-graph.h
c++/src/mr/: Makefile  fileio.cc  rdtsc_timer.cc
c++/src/mr/net/: Makefile  netio.cc
c++/src/mr/net/sockets/: Makefile  netio_sockets.cc  netio_sockets.h
c++/test/: CMakeLists.txt  Makefile
c++/test/analyze-communities/: CMakeLists.txt  main.cc
c++/test/d-kv-store/: CMakeLists.txt  Makefile  main.cc
c++/test/d-kv-store/d-kv-store/: CMakeLists.txt  main.cc
c++/test/d-kv-store/read-only/: CMakeLists.txt  Makefile  main.cc
c++/test/fixed-size-set/: CMakeLists.txt  main.cc
c++/test/preprocess/: CMakeLists.txt  Makefile  main.cc
c++/test/preprocess/netscience/: main.cc
c++/test/preprocess/relativity/: main.cc
c++/test/rand-distr/: CMakeLists.txt  main.cc
c++/test/rand-normal/: CMakeLists.txt  main.cc
c++/test/random/: CMakeLists.txt  Makefile  test_random.cc
c++/test/rdma/: CMakeLists.txt  Makefile
c++/test/rdma/barrier/: CMakeLists.txt  main.cc
c++/test/rdma/d-kv-store/: main.cc
c++/test/rdma/oob/: CMakeLists.txt  testOOBNetwork.cc
c++/test/rdma/qperf-read/: CMakeLists.txt  Makefile  main.c  mrg_GP_socket.c  mrg_GP_socket.h  mrg_errno.h  mrg_util.h  mrg_util_error.c  mrg_util_error.h  pan_timer.h
c++/test/rdma/read-only/: main.cc
c++/test/scans/: Makefile
c++/test/scans/vexcl/: CMakeLists.txt  vexcl-compute-test.cc
c++/test/sum/: CMakeLists.txt
c++/test/sum/vexcl/: CMakeLists.txt  Makefile  vexcl-compute-test.cc
c++/test/timer/: CMakeLists.txt  Makefile  main.cc
com/uva/: edge.py  estimate_phi.pyx  file_random.py  main.py  network.py  sample_latent_vars.c  sample_latent_vars.pyx  sampler.py  source_aware_random.py  wrapper_random.py
com/uva/custom_random/: custom_random.pyx  test_random.py
com/uva/learning/: learner.py  mcmc_sampler_batch.py  mcmc_sampler_stochastic.py  variational_inference_batch.py  variational_inference_stochastic.py
com/uva/preprocess/: data_factory.py  netscience.py  relativity.py
datasets/: CA-GrQc-tiny.txt  netscience.txt  network.txt
nl/vu/cs/: clsampler.py
python/: Makefile  main.py  setup.py
python/com/uva/: estimate_phi.pyx  network.py  sample_latent_vars.pyx  timer.py  variational_inference_stochastic.py
python/com/uva/learning/: learner.py  mcmc_sampler_batch.py  mcmc_sampler_stochastic.py  variational_inference_batch.py
python/com/uva/preprocess/: data_factory.py  netscience.py  relativity.py
